Implemented initial version of user controller /w CRUD functionality, added default user to seeder
