# database/factories/ModelFactory.php
@@ -6,5 +6,7 @@ $factory->define(App\Models\User::class, function (Faker\Generator $faker) {
     return [
         'name' => $faker->name,
         'email' => $faker->email,
+        'password' => app('hash')->make($faker->password),
+        'api_key' => $faker->uuid,
     ];
 });
